<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PrEPare</string>

    <string name="title_select_device">Select Pill Bottle</string>

    <string name="button_label_save">Save</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_adjust">Adjust</string>

    <string name="dialog_header_ideal_time">Ideal Time</string>
    <string name="dialog_header_reminders">Reminders</string>
    <string name="dialog_header_upload_photo">Upload Photo</string>

    <string name="header_adjust_medication">Adjust Schedule</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="upload_option_take_photo">Take New Photo</string>
    <string name="upload_option_from_gallery">Choose From Gallery</string>
    <string name="upload_option_reset">Reset to Default</string>

    <string name="refresh_content_description">Refreshes the calendar with today\'s date selected.</string>

    <string name="plot_option_by_month">By Month</string>
    <string name="plot_option_by_week">By Week</string>

    <string name="change_month_previous"><![CDATA[<<]]></string>
    <string name="change_month_next"><![CDATA[>>]]></string>

    <string name="menu_item_title_chart">Chart My Progress</string>
    <string name="menu_item_title_settings">Settings</string>
    <string name="menu_item_title_reminders">Set Reminders</string>

    <string name="notification_reminder_title" formatted="false">%1$s Reminder</string>

    <string name="notification_gesture_detected_title">Detected Pill Taken!</string>
    <string name="notification_gesture_detected_text" formatted="false">We detected that you took a dose of %1$s at %2$s. Is this true?</string>

    <string name="url_mobile_apk_shortened">https://goo.gl/CXRWRj</string>
    <string name="url_mobile_apk"><![CDATA[https://drive.google.com/uc?export=view&id=0Byr6oHEGQO73VGl0c2tnYmttU0k]]></string>
    <string name="url_mobile_version"><![CDATA[https://drive.google.com/uc?export=view&id=0Byr6oHEGQO73dFRFbW9SOExTVzg]]></string>
    <string name="link_mbientlab">https://metawear.mbientlab.com</string>
    <string name="mobile_health_client_user_id">91.e6.eb.8d.65.ee.a5.e3.5a.b3</string>

    <string name="title_configuring">Configuring…</string>
    <string name="message_configure_wait">Please wait while the device is configured.</string>
    <string name="title_connecting">Connecting…</string>
    <string name="message_connect_wait">Please wait while connecting to the device.</string>
    <string name="label_cancel">Cancel</string>
    <string name="text_add_reminder">ADD</string>

    <string-array name="preference_options_volume">
        <item>Off</item>
        <item>Vibrate</item>
        <item>Sound</item>
    </string-array>

    <string-array name="preference_options_time_type">
        <item>AM/PM</item>
        <item>24HR</item>
    </string-array>

    <string name="default_notification_text" formatted="false">Don\'t forget your %1$s (%2$d mg)</string>
    <string name="adherence_text_missed">Missed!</string>
    <string name="adherence_text_unknown">Unknown</string>
    <integer name="pref_volume_index_default">1</integer>
    <integer name="pref_time_type_index_default">0</integer>

    <string name="about_app_version" formatted="false">Version %1$s</string>
    <string name="about_powered_by_metawear">Powered by Metawear</string>

    <string name="wearable_service_notification">Connected to MS Band.</string>
    <string name="wearable_sensors_notification">Collecting data from MS Band.</string>
    <string name="wearable_connection_failed_notification">Failed to connect to MS Band.</string>
    <string name="wearable_connecting_notification">Connecting to MS Band…</string>
    <string name="notification_action_try_again">Try Again</string>
    <string name="notification_action_stop_service">Stop Service</string>
    <string name="notification_action_cancel">Cancel</string>
    <string name="wearable_bluetooth_disabled_notification">Bluetooth is disabled. Please enable it to connect to the MS Band.</string>
    <string name="notification_action_enable_bluetooth">Enable Bluetooth</string>
    <string name="wearable_bluetooth_not_supported_notification">Bluetooth is not supported on your device.</string>
</resources>
