<?xml version="1.0" encoding="utf-8"?>
<!--
    This dialog allows the user to adjust medication information. This allows the user
    to adjust the dosage, the reminder times and set a new image for each medication.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/imgMedication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>
        <TextView
            android:id="@+id/txtMedicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imgMedication"
            android:layout_alignBottom="@id/imgMedication"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_header_ideal_time"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/color_primary_dark"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/timePickerAM"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"

            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/label_AM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="0dp"
            android:text="@string/am"/>

        <TimePicker
            android:id="@+id/timePickerPM"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"

            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/label_PM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:text="@string/pm"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_header_upload_photo"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/color_primary_dark"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_option_take_photo"
        android:gravity="center"
        android:drawableStart="@drawable/ic_photo_camera_black_24dp" />

    <TextView
        android:id="@+id/choose_from_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_option_from_gallery"
        android:gravity="center"
        android:drawableStart="@drawable/ic_photo_black_24dp" />

    <TextView
        android:id="@+id/default_medication_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_option_reset"
        android:gravity="center"
        android:drawableStart="@drawable/ic_refresh_black_24dp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_label_cancel"
            android:textStyle="bold"
            android:background="@drawable/cancel_button_gradient"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="ButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_label_save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/save_button_gradient"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>

</LinearLayout>