<?xml version="1.0" encoding="utf-8"?>
<!--
    The progress activity aggregates and visualizes adherence data weekly or monthly.
    The user can select medications for which to graph adherence data.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    tools:context="cs.umass.edu.customcalendar.view.activities.ProgressActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        ap:popupTheme="@style/ThemeOverlay.AppCompat.Light"

        android:elevation="4dp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_adjust_medication"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/color_primary_dark"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/lvMedications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/dialog_button_layout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" >
        <Button
            android:id="@+id/btn_cancel_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_label_cancel"
            android:textStyle="bold"
            android:background="@drawable/cancel_button_gradient"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="ButtonStyle">
        </Button>
        <Button
            android:id="@+id/btn_adjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_label_adjust"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/save_button_gradient"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_header_reminders"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/color_primary_dark"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtAddReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:drawablePadding="5dp"
            android:text="@string/text_add_reminder"
            android:textStyle="bold"
            android:textColor="@color/color_list_item_selected"
            android:drawableStart="@drawable/ic_add_alarm_black_24dp"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lvReminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="32dp"
        android:cacheColorHint="@android:color/darker_gray"/>
</LinearLayout>
