<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary" >

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:paddingTop="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAppName"
        android:text="@string/about_app_version"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:paddingTop="10dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnCheckForUpdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVersion"
        android:text="@string/pref_check_for_updates_title"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/save_button_gradient"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        tools:ignore="contentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/metawearIcon"
        android:src="@drawable/metawear"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"/>

    <TextView
        tools:ignore="contentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/about_powered_by_metawear"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"
        android:layout_alignTop="@id/metawearIcon"
        android:layout_alignBottom="@id/metawearIcon"
        android:gravity="center"/>

</RelativeLayout>